--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# intellij local config file
+.idea/
+*.iml
+
+# output file
+target/
+
+# dolphin
+*.directory
+
+# Eclipse
+.classpath
+.project
+.settings/
