--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
                                 <filter>
                                     <artifact>*:*</artifact>
                                     <excludes>
+                                        <exclude>it/polimi/ds/replica/**</exclude>
                                         <exclude>it/polimi/ds/client/**</exclude>
                                     </excludes>
                                 </filter>
@@ -142,6 +143,7 @@
                                     <artifact>*:*</artifact>
                                     <excludes>
                                         <exclude>it/polimi/ds/tracker/**</exclude>
+                                        <exclude>it/polimi/ds/replica/**</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
