--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -28,6 +27,7 @@ hs_err_pid*
 
 # output file
 target/
+out/
 
 # dolphin
 *.directory
